--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "less": "^4.2.2",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
     "start-server-and-test": "^2.0.10",
